Fix rotate on iPhone image

--- a/css/style.css
+++ b/css/style.css
@@ -70,9 +70,6 @@
 }
 
 .portrait-circle{
-	-ms-transform: rotate(90deg); /* IE 9 */
-    -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
-    transform: rotate(90deg);
     border-radius: 50%;
     height: 200px;
     width: 200px;
